M travis-ci config

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ script: JEKYLL_ENV=production jekyll serve --baseurl "" --detach && htmlproof ./
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+
+branches:
+  only:
+    - tyy-works
