--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ favicon: "/img/favicon.ico"
 
 black-favicon: "/img/black-lab-glass.ico"
 
-background-img: "../img/intro-bg.jpg"
+background-img: 
 
 ##############################
 # Dynamic Text on the Header #
@@ -132,14 +132,14 @@ email: "luckytianyiyan@gmail.com"
 ##################
 
 social:
-  - title: "facebook"
-    url: "https://facebook.com/"
-  - title: "twitter"
-    url: "https://twitter.com/"
+  # - title: "facebook"
+  #   url: "https://facebook.com/"
+  # - title: "twitter"
+  #   url: "https://twitter.com/"
   - title: "github"
     url: "https://github.com/luckytianyiyan"
-  - title: "bitcoin"
-    url: "https://blockchain.info/address/1LHuKC9Em3KA5yoZaf7nngnNdf9K7s2gSi"
+  # - title: "bitcoin"
+  #   url: "https://blockchain.info/address/1LHuKC9Em3KA5yoZaf7nngnNdf9K7s2gSi"
   - title: "rss"
     url: "/feed.xml"
 
