--- a/_config.yml
+++ b/_config.yml
@@ -164,7 +164,12 @@ pages_list:
 
 # Exclusion list from the generated _site
 
-exclude: ["LICENSE", "README.md", "CONTRIBUTING", "CONTRIBUTORS", "scripts"]
+exclude:
+  - README.md
+  - Gemfile
+  - Gemfile.lock
+  - CONTRIBUTING
+  - CONTRIBUTORS
 
 # Pagination path
 
