M Add TYBlurImage to timeline

--- a/_config.yml
+++ b/_config.yml
@@ -107,6 +107,9 @@ events:
   - image: "/img/timeline/tylauncher-156x156.png"
     date: "2015年08月 - Today"
     description: "桌面应用 - TyLauncher 重构了 TyyAppManager, 并更名为 TyLauncher"
+  - image: "/img/timeline/bundle-156x156.png"
+    date: "2015年12月 - Today"
+    description: "iOS第三方库 - TYBlurImage. 为 UIImage 添加高斯模糊效果, 以 Category 形式为 UIImageView 添加高斯模糊渐变动画"
   - image: "/img/timeline/6-d_space-156x156.png"
     date: "2015年02月 - 2015年04月"
     description: "手游 - Six-dimensional Space(6-D Space、六维空间)"
